--- a/StatusPage/public/style.css
+++ b/StatusPage/public/style.css
@@ -5,3 +5,9 @@
 .status-text {
 	float: left;
 }
+.footer {
+	bottom: 0;
+	width: 100%;
+	height: 150px; /* Set the fixed height of the footer here */
+	line-height: 100px; /* Vertically center the text there */
+}
